# webrefurb-landing

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CNAME  CODEX_PRODUCTION_READINESS_PLAN_2.md  DESIGN_BRIEF.md  Dockerfile  EXECUTION_PLAN_RESTAURANT_LEADS.md  HANDOFF.codex.md  HANDOFF.md  LAUNCH_CHECKLIST.md  MENU_DESIGN_LOOP.md  MENU_DESIGN_V4_HANDOFF.md  NO_NEON.md  PLAN.md  PRODUCTION_SIMULATION_TEST_PLAN.md  PRODUCT_AUDIT_2026-04-29.md  RELEASE_CHECKLIST.md  compose.no-neon.yml  email_discovery.yaml  index.html  menu.html  package.json  pricing.html  pyproject.toml  restaurant_email_leads.md  sitemap.xml  smoke_test_outreach.py
.claude/: DESIGN-LANGUAGE.md
dashboard/: app.py
docs/: CNAME  TRIAL_WORKFLOW.md  index.html  pricing.html  robots.txt
glm_menu_template_package_BROWSER_CHECKED_bilingual_right_verified/: CHECK_MANIFEST.json  README_GLM_INSTRUCTIONS.md  drinks_menu_browser_preview.html  example_drinks_menu_data.json  example_food_menu_data.json  food_menu_browser_preview.html  menu_schema.json  restaurant_menu_print_master.html
ja/: index.html  pricing.html
ops/: BUSINESS_POLICIES.md  DATA_RETENTION.md  DEPLOYMENT.md  OWNER_JOURNEY.md  PILOT_PLAN.md  PRODUCTION_READY.md  RUNBOOKS.md  TRIAL_OPERATIONS.md
pipeline/: backup.py  business_name.py  cli.py  constants.py  contact_crawler.py  contact_policy.py  custom_build.py  directory_discovery.py  email_html.py  email_templates.py  evidence.py  evidence_classifier.py  export.py  extract.py  final_export_qa.py  geo.py  hosted_sample.py  html_parser.py  japan_restaurant_intel.py  launch.py  models.py  (+44 more)
(+219 files in other folders)
