[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "webrefurb-menu"
version = "0.1.0"
description = "English menu translation pipeline for Japanese ramen and izakaya shops"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
