[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webrefurb-menu"
version = "0.1.0"
description = "English menu translation pipeline for Japanese ramen and izakaya shops"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.6",
    "playwright>=1.44.0",
    "qrcode>=7.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["pipeline*", "dashboard*"]
exclude = ["state*", "assets*", "docs*", "tests*", "node_modules*"]
